samples/_failures_safe/1761351226_743b30_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d6b4c00.c:168: error: expected ‘;’, ‘,’ or ‘)’ at end of input
